Fix left panel overflows

--- a/src/components/CPU.css
+++ b/src/components/CPU.css
@@ -25,6 +25,7 @@
 
 	.CPU__pane--open {
 		display: flex;
+		height: 70vh;
 	}
 
 	.CPU__paneClose {
