--- a/src/components/CPU/FuncList.css
+++ b/src/components/CPU/FuncList.css
@@ -19,8 +19,7 @@
 }
 
 .FuncList__listing {
-	flex: 1 1 auto;
-	flex-basis: 50vh;
+	flex: 1;
 }
 
 .FuncList__listing button {
