--- a/src/components/CPU/RegPanel.css
+++ b/src/components/CPU/RegPanel.css
@@ -1,18 +1,19 @@
 #RegPanel {
 	display: flex;
-	flex: 1 1 auto;
+	flex: 1;
 	flex-direction: column;
 	width: 22ex;
 }
 
 #RegPanel dl {
+	flex: 1 1 auto;
 	font-family: Consolas, monospace;
 	line-height: 0.8em;
 	margin: 0;
 	margin-top: 1px;
-	height: calc(28em + 71px);
 	overflow-y: auto;
 	text-align: start;
+	height: 0;
 }
 
 #RegPanel dt {
@@ -78,15 +79,4 @@
 /* These fix a bug in IE11. */
 .LeftPanel .react-tabs__tab-list {
 	flex: 0 0 auto;
-}
-
-.LeftPanel,
-.LeftPanel .react-tabs,
-.LeftPanel .react-tabs__tab-panel,
-#RegPanel {
-	height: 100%;
-}
-
-#RegPanel .react-tabs__tab-panel {
-	height: calc(100% - 22px);
 }
